--- a/src/index.css
+++ b/src/index.css
@@ -52,7 +52,24 @@ body{
     height: 10rem;
 }
 
-.restaurant{
+.restaurant-list{
     display: flex;
     flex-wrap: wrap;
+}
+
+.search-bar{
+    margin: 0.5rem;
+}
+
+.search-input{
+    padding: 0.2rem;
+    font-size: 1.2rem;
+    margin-right: 0.5rem;
+}
+
+.search-btn{
+    padding: 0.2rem;
+    font-size: 1.2rem;
+    background-color: aquamarine;
+    border-radius: 0.2rem;
 }
