--- a/src/index.css
+++ b/src/index.css
@@ -104,3 +104,15 @@ a{
     text-decoration: none;
     color: black;
 }
+
+.restaurant-menu{
+    display: flex;
+    gap: 1rem;
+    margin: 0.5rem;
+    padding: 0.5rem;
+    border: 2px solid;
+}
+
+.restaurant-menu img{
+    height: 20rem;
+}
